Latest API changes and pytest additions
